# mysql-data-quality

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: semantic-version.yml
.github/workflows/: ci.yml
docs/: git-flow-guide.md  validators-documentation.md
scripts/: dev.sh  git-flow-helper.sh  setup.py  setup.sh  test_connection.py  update-shields.sh  version.sh
src/data_quality/: __init__.py  cli.py  config.py
src/data_quality/connectors/: __init__.py  base.py  factory.py  mysql.py  oracle.py  postgresql.py  sqlite.py  sqlserver.py
src/data_quality/core/: __init__.py  data_analyzer.py  orchestrator.py  report_manager.py  volumetry_calculator.py
src/data_quality/reports/: __init__.py  base.py  html_report.py  json_report.py  summary_report.py
src/data_quality/validators/: __init__.py  base.py  completeness.py  duplicates.py  integrity.py  patterns.py
tests/: __init__.py  conftest.py
tests/unit/: test_cli.py  test_config.py
tests/unit/connectors/: test_base.py  test_factory.py  test_mysql.py  test_oracle.py  test_postgresql.py  test_sqlite.py  test_sqlserver.py
tests/unit/core/: test_data_analyzer.py  test_orchestrator.py  test_report_manager.py  test_volumetry_calculator.py
tests/unit/reports/: test_html_report.py  test_json_report.py  test_summary_report.py
tests/unit/validators/: test_base.py  test_completeness.py  test_duplicates.py  test_integrity.py  test_patterns.py
